--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server server.json -w -d 500"
   },
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.0.3",
@@ -28,6 +29,7 @@
     "eslint": "^8.44.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "json-server": "^0.17.3",
     "postcss": "^8.4.25",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "^3.3.2",
